--- a/package.json
+++ b/package.json
@@ -12,23 +12,27 @@
   },
   "dependencies": {
     "framer-plugin": "^2",
+    "lucide-react": "^0.464.0",
     "react": "^18",
     "react-dom": "^18",
     "vite-plugin-mkcert": "^1"
   },
   "devDependencies": {
     "@eslint/js": "^9",
-    "@types/react-dom": "^18",
     "@types/react": "^18",
-    "@vitejs/plugin-react-swc": "^3",
+    "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "typescript-eslint": "^8.0.1",
-    "vite-plugin-framer": "^1",
-    "eslint": "^9.9.0",
     "globals": "^15.9.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.3",
-    "vite": "^5"
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5",
+    "vite-plugin-framer": "^1"
   }
 }
