--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pack": "npx framer-plugin-tools@latest pack"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "framer-plugin": "^2",
     "lucide-react": "^0.464.0",
     "react": "^18",
