--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "axios": "^1.7.9",
     "framer-plugin": "^2",
     "lucide-react": "^0.464.0",
     "react": "^18",
